--- a/cyclope/templates/admin/cyclope/menuitem/change_form.html
+++ b/cyclope/templates/admin/cyclope/menuitem/change_form.html
@@ -13,8 +13,7 @@ Configures chainedSelect for views in relation to content type
 $(function() {
   $("#id_content_view").chainedSelect({
         parent: '#id_content_type',
-        // this /cyclope/ url should not be hard_coded here
-        url: '/cyclope/registered_views_json',
+        url: '/{{CYCLOPE_PREFIX}}registered_views_json',
         value: 'view_name',
         label: 'verbose_name'
     });
