--- a/cyclope/templates/cyclope/themes/potente/one_sidebar.html
+++ b/cyclope/templates/cyclope/themes/potente/one_sidebar.html
@@ -18,13 +18,22 @@ Si modificas no borres estas lineas :)
   <title>{{ site_settings.title }}</title>
   <meta name="Keywords" content="{{ site_settings.keywords }}" />
   <meta name="Description" content="{{ site_settings.description }}" />
+
+
+
+
   <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/potente.css" rel="stylesheet" type="text/css"/>
+
+      <style type="text/css">
+
+</style>
 
 <!-- !N FALTA IMPLEMENTAR
 <link href="/rss.php" title="RSS" type="application/rss+xml" rel="alternate">
 -->
 
   <script src="{{ CYCLOPE_THEME_MEDIA_URL }}js/mootools.v1.11.js" type="text/javascript"></script>
+  <script type="text/javascript" src="{{ CYCLOPE_MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
 
   <script language="javascript" type="text/javascript">
   function abrir_popup(name) {
@@ -129,7 +138,9 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
             <!-- INICIA PRINCIPAL -->
             <div id="principal">
               <div class="top"><span>contenido</span></div>
+              <div id="content" class="category_root_items_list">
               {% block content %} {% endblock %}
+              </div>
 
 {% comment %}
               {section name=notaprincipal loop=$principal}
@@ -170,7 +181,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
       </div> <!-- TERMINA medianera -->
 
       <div id="espaciopie"></div>
-      <div id="pie">
+      <div id="pie"> {% region 'footer' %}
         <a href="http://www.radioteca.net">Radioteca</a>, <a href="http://www.unesco.org">UNESCO</a> y <a href="http://www.codigosur.org">Código Sur</a> apoyan la construcción de esta web, pero no necesariamente comparten y adhieren a los contenidos publicados, siendo estos absoluta responsabilidad de las organizaciones usuarias.<br/>
         Los contenidos de este sitio web están bajo una <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO"> Licencia Creative Commons Reconocimiento-NoComercial-SinObraDerivada 3.0</a>.<br/>
         Este sitio ha sido diseñado por <a href="http://www.codigosur.org">Código Sur</a> y es administrado con el editor dinámico de contenidos <a href="http://cyclope.codigosur.org">Cyclope 2.0</a> que ha sido desarrollado por <a href="http://www.codigosur.org">Código Sur</a>.<br/>
