replaced example.db data and fixed custom_url for menues

--- a/cyclope/templates/cyclope/menu_root_items_list.html
+++ b/cyclope/templates/cyclope/menu_root_items_list.html
@@ -3,7 +3,15 @@
 {% block content %}
   <ul>
   {% for menu_item in menu_items %}
-    <li><a href="/{{CYCLOPE_PREFIX}}{{menu_item.url}}"><span>{{ menu_item.name }}</span></a></li>
+    <li>
+      {% if menu_item.custom_url %}
+        <a href="{{menu_item.url}}">
+      {% else %}
+        <a href="/{{CYCLOPE_PREFIX}}{{menu_item.url}}">
+      {% endif %}
+        <span>{{ menu_item.name }}</span>
+      </a>
+    </li>
   {% endfor %}
   </ul>
 {% endblock content%}
