some more example data for the demo site.

--- a/cyclope/templates/cyclope/staticpage_detail.html
+++ b/cyclope/templates/cyclope/staticpage_detail.html
@@ -7,8 +7,7 @@ When showing the StaticPage as the main content of the view, the host_template i
 
 {% block content %}
 
-<p>{{ staticpage.name }} <br/>detail view</p>
+<h1>{{ staticpage.name }} </h1>
 <p>{{ staticpage.text|safe }}</p>
-      <div> <a href="{% url staticpage-detail staticpage.slug %}"> {{  staticpage.slug}}</a></div>
 
 {% endblock content%}
