--- a/cyclope/templates/cyclope/themes/potente/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/potente/two_sidebars.html
@@ -95,7 +95,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
             <div id="rss"><a href="/rss.php">Suscripción RSS</a></div>
             <div id="banners">
               <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO" target="_blank">
-                <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cc.png" alt="Licencia Creative Commons" width="94 height="15" border="0" />
+                <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cc.png" alt="Licencia Creative Commons" width="94" height="15" border="0" />
                 </a><br />
                 <a href="http://cyclope.codigosur.org">
                   <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cyclope.png" alt="Administrado con Cyclope" width="94" height="15" border="0" />
