added Neutrona Theme

--- a/cyclope/templates/cyclope/themes/potente/base.html
+++ b/cyclope/templates/cyclope/themes/potente/base.html
@@ -61,7 +61,7 @@ Si modificas no borres estas lineas :)
           <div id="agua">
             <div class="top"></div>
 {%comment%}           {{ left_region|safe }} {%endcomment%}
-           {% region 'sidebar' %}
+           {% region 'left_sidebar' %}
 
             <!-- !N FALTA IMPLEMENTAR:
             <ul id="etiquetas">
