fixed article views and modified initial_data for demo.

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -1,1 +1,8 @@
-<p>Article: {{ article.name }} detail template</p>
+{% extends host_template %}
+
+{% block content %}
+
+<h1>{{ article.name }} </h1>
+<p>{{ article.text|safe }}</p>
+
+{% endblock content%}
