--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -40,7 +40,7 @@ Si modificas no borres estas lineas :)
       <!-- INICIA CABEZAL -->
       <div id="cabezal">
         <div class="logo">
-          <h1><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
+          <h1><a href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
           <h2><a href="/">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}</a></h2>
         </div>
       </div>
