--- a/cyclope/templates/cyclope/staticpage_detail.html
+++ b/cyclope/templates/cyclope/staticpage_detail.html
@@ -7,7 +7,9 @@ When showing the StaticPage as the main content of the view, the host_template i
 
 {% block content %}
 
-<h1>{{ staticpage.name }} </h1>
-<p>{{ staticpage.text|safe }}</p>
+<div class="staticpage detail">
+  <h1>{{ staticpage.name }} </h1>
+  <p>{{ staticpage.text|safe }}</p>
+<div>
 
 {% endblock content%}
