--- a/cyclope/templates/cyclope/themes/neutrona/base_andaba.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base_andaba.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <!--
 Plantilla Neutrona para Cyclope 2.0
-Esta plantilla fue desarrollada por Codigo Sur: www.codigosur.org
-Diseno conceptual + HTML + CSS: Santiago Hoerth
+Realizada por Código Sur
+Diseno Conceptual: Santiago Hoerth
+Maquetacion HTML/CSS: Santiago Hoerth
 Codigo HTML realizado bajo licencia GPL (copialo, mejoralo, pasalo)
 Ver licencia en: http://creativecommons.org/licenses/GPL/2.0/deed.es_AR
-Ten en cuenta que las imagenes, los nombres y los logos de este sitio no pueden usarse. Solo el codigo HTML y CSS es GPL. Gracias :)
+Ten en cuenta que las imagenes, los nombres y los logos de este sitio no pueden usarse. Solo el codigo HTML es GPL. Gracias :)
 Si modificas no borres estas lineas :)
  -->
 
@@ -15,98 +17,91 @@ Si modificas no borres estas lineas :)
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{{ CYCLOPE_SITE_SETTINGS.global_title }}</title>
-    <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
-    <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
-    <!--
-        TODO(nicoechaniz): implement RSS
-        <link href="/rss.php" title="RSS" type="application/rss+xml" rel="alternate" /> -->
+    <meta name="Keywords" content="{$tags.keywords}" />
+    <meta name="Description" content="{$tags.desc}" />
 
-    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/neutrona.css" rel="stylesheet" type="text/css"/>
+    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/neutronaold.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="{{ CYCLOPE_MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
 
-    <script language="javascript" type="text/javascript">
+<!--
+    <link href="/rss.php" title="RSS" type="application/rss+xml" rel="alternate">
+<script language="javascript" type="text/javascript">
       function abrir_popup(name) {
         window.open(name,'popup1','width=400,height=350,resizable=yes,menubar=no,toolbar=no,scrollbars=yes');
       }
     </script>
-
-
+-->
   </head>
 
   <body>
-
     <div id="mascara">
-      {% region 'header' %}
+      {% region 'header'%}
 
-      <!-- cabezal -->
+      <!-- INICIA CABEZAL -->
       <div id="cabezal">
         <div class="logo">
           <h1><a href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
           <h2><a href="/">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}</a></h2>
         </div>
       </div>
-      <!-- /cabezal -->
+  <!-- TERMINA CABEZAL -->
 
       <div class="clear"></div>
 
-      <!-- medianera -->
       <div id="medianera">
-
-        <!-- contenedor -->
         <div id="contenedor">
-
-          <!-- agua -->
+          <!--comentario(nicoechaniz): qué es este div? <div class="pre-cycloparser"> -->
           <div id="agua">
+
             <div class="top"></div>
             {% region 'left_sidebar' %}
 
-            <!-- buscar -->
-            <div id="buscar_h">
-              <form action="/busqueda" method="post">
-                <input type="text" name="consulta"/>
-                <input type="submit" value="" class="submit"/>
-              </form>
-            </div>
-            <!-- /buscar -->
-
-            <!-- lista_etiquetas --> <!-- TODO(nicoechaniz): implement tags -->
-            <div id="etiquetas">
-              <span class="title">Etiquetas</span>
-              <div class="box">
-              <a href="{{ tag.link}}">
-                {{ tag }}
-                </a>&nbsp&nbsp
+<!-- TODO(nicoechaniz): re-ver cuando agregue tag-cloud -->
+<!--
+            <ul id="etiquetas">
+              <div class="top">
+                <li class="title">Etiquetas</li>
               </div>
-            </div>
-            <!-- /lista_etiquetas -->
+              <div class="mid">
+                <div class="box">
+                  {section name=bucle loop=$bucleetiquetas}
+                  <a href="{$bucleetiquetas[bucle].link}">
+                    {$bucleetiquetas[bucle].nombre}
+                  </a>&nbsp&nbsp
+                  {/section}
+                </div>
+              </div>
+              <div class="bottom"><div>
+            </ul>
+-->
 
-            <!-- bannercitos -->
-            <div id="rss"><a href="/rss">Suscripción RSS</a></div>
+<!-- comentario(nicoechaniz): estos dos div sobran? -->
+<!--              </div>
+            </div>
+-->
+
+            <div id="rss"><a href="/rss.php">Suscripción RSS</a></div>
             <div id="banners">
-              <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO" target="_blank">
-                <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cc.png" alt="Licencia Creative Commons" width="94" height="15" border="0" />
-              </a><br/>
+              <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO" target="_blank"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cc.png" alt="Licencia Creative Commons" width="94" height="15" border="0" />
+              </a><br />
               <a href="http://cyclope.codigosur.org">
                 <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_cyclope.png" alt="Administrado con Cyclope" width="94" height="15" border="0" />
-              </a><br/>
+              </a><br />
               <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
                 <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/banners/banners_css.png" alt="CSS Válido" width="94" height="15" border="0" />
               </a><br />
-            </div>
-            <!-- /bannercitos -->
-            <div class="bottom"></div>
+            </div><!-- TERMINA BANNERS -->
 
-          </div>
-          <!-- /agua -->
+            <div class="bottom"></div>
+          </div> <!-- TERMINA ESPACIO AGUA -->
 
           <div id="page_content">
             {% block page_content %} {% endblock %}
           </div>
 
-        </div>
-        <!-- /contenedor -->
-      </div>
-      <!-- /medianera -->
+        </div> <!-- TERMINA CONTENEDOR -->
+      </div> <!-- TERMINA MEDIANERA -->
+
 
       <div id="espaciopie"></div>
 
@@ -119,14 +114,13 @@ Si modificas no borres estas lineas :)
         Este sitio ha sido diseñado por
         <a href="http://www.codigosur.org">Código Sur</a>
         y es administrado con el editor dinámico de contenidos
-        <a href="http://cyclope.codigosur.org">Cyclope GPL</a>
+        <a href="http://cyclope.codigosur.org">Cyclope 2.0</a>
         que ha sido desarrollado por
         <a href="http://www.codigosur.org">Código Sur</a>.<br/>
         Este sitio ha sido desarrollado sobre estándares de diseño web,
         cualquier navegador de calidad lo visualizará correctamente: <br/>
-
-        <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/css/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" alt=""/>
-        <map name="map-nav" id="map-nav">
+        <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/css/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" />
+        <map name="map-nav">
           <!-- #$-:Image map file created by GIMP Image Map plug-in -->
           <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
           <!-- #$-:Please do not edit lines starting with "#$" -->
@@ -139,10 +133,8 @@ Si modificas no borres estas lineas :)
           <area shape="rect" coords="162,3,199,34" alt="Safari" title="Safari" href="http://www.apple.com/es/safari/download/" />
           <area shape="rect" coords="206,4,242,34" alt="Google Chrome" title="Google Chrome" href="http://www.google.com/chrome/index.html?hl=es" />
         </map>
-      </div>
-      <!-- /pie -->
-    </div>
-    <!-- /mascara -->
+      </div> <!-- TERMINA PIE -->
 
+    </div> <!-- TERMINA MASCARA -->
   </body>
 </html>
